--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -13,6 +13,10 @@ server {
     add_header Cache-Control public;
   }
 
+  location ~ ^/uploads/download/ {
+    add_header Content-Disposition "attachment";
+  }
+
   try_files $uri/index.html $uri @unicorn;
   location @unicorn {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
